Import of BERNHARD/Crypt-NSS-X509-0.02_01 from CPAN.
gitpan-cpan-distribution: Crypt-NSS-X509
gitpan-cpan-version:      0.02_01
gitpan-cpan-path:         BERNHARD/Crypt-NSS-X509-0.02_01.tar.gz
gitpan-cpan-author:       BERNHARD
gitpan-cpan-maturity:     developer

--- a/X509/CertList.pod
+++ b/X509/CertList.pod
@@ -22,7 +22,7 @@ Crypt::NSS::X509::CertList - NSS Certificate lists
   my @certs = $certList->dump();
 
 
-=head1 ABSRACT
+=head1 ABSTRACT
 
 Perl interface to NSS Certificate Lists
 
@@ -47,6 +47,11 @@ Add a C<Crypt::NSS::X509::Certificate> to the certificate list
 =item B<dump>
 
 Returns all C<Crypt::NSS::X509::Certificate>s that are in the certificate list as an array.
+
+=item B<new_from_rootlist>
+
+Return a CertList that is constructed by reading a file containing a list of pem-encoded
+certificates.
 
 =back
 
