--- a/README.pod
+++ b/README.pod
@@ -57,7 +57,7 @@ It is not possible to load certificates and store them permanently. This mode
 is primarily useful when no certificate verification is desired.
 
 The second way to load NSS is to specify the path to a database directory at
-load time. The directory has to expst. If no NSS database exists in the 
+load time. The directory has to exist. If no NSS database exists in the 
 specified directory, it is automatically generated
 
   use NSS (':dpath', $dbdir);
@@ -102,6 +102,57 @@ the NSS temporary certificate store to the standard output
 This function shuts down the NSS library and reinitialized it again with the
 exact same parameters. Do not use this if you do not absolutely know what
 this encompasses / why it might be necessary. 
+
+=back
+
+=head2 Certificate usages
+
+You can specify several different certificate usages for the verify functions in
+L<Crypt::NSS::X509::Certificate>.
+
+=over 4
+
+=item certUsageAnyCA
+
+CA certificate of any kind.
+
+=item certUsageEmailRecipient
+
+Used to encrypt S/MIME mails.
+
+=item certUsageEmailSigner
+
+Used to verify S/MIME email signatures.
+
+=item certUsageObjectSigner
+
+Certificate allowed to sign executable code files like jar files.
+
+=item certUsageSSLCA
+
+SSL Certificate Authority certificate.
+
+=item certUsageSSLClient
+
+SSL Client certificate.
+
+=item certUsageSSLServer
+
+SSL Server certificate.
+
+=item certUsageSSLServerWithStepUp
+
+SSL Server certificate, which allows export clients to use strong cryptography.
+
+=item certUsageStatusResponder
+
+Used for OCSP responders.
+
+=item certUsageProtectedObjectSigner
+=item certUsageUserCertImport
+=item certUsageVerifyCA
+
+TODO: Find out what those do.
 
 =back
 
