Import of JOHANNA/Crypt-NSS-X509-0.04 from CPAN.
gitpan-cpan-distribution: Crypt-NSS-X509
gitpan-cpan-version:      0.04
gitpan-cpan-path:         JOHANNA/Crypt-NSS-X509-0.04.tar.gz
gitpan-cpan-author:       JOHANNA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ To install this module type the following:
 
 COPYRIGHT AND LICENCE
 
-Copyright 2012 by Bernhard Amann
+Copyright 2012 by Johanna Amann
 
 This Library is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of 
 the MPL was not distributed with this library, You can obtain one at 
