--- a/README.pod
+++ b/README.pod
@@ -162,11 +162,11 @@ OpenSSL(1), Crypt::X509, Crypt::NSS
 
 =head1 AUTHOR
 
-Bernhard Amann, E<lt>bernhard@icsi.berkeley.eduE<gt>
+Johanna Amann, E<lt>johanna@icir.orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2012 by Bernhard Amann
+Copyright 2012 by Johanna Amann
 
 This Library is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
