--- a/X509/CRL.pod
+++ b/X509/CRL.pod
@@ -81,11 +81,11 @@ Returns the CRL entries as an array of hash-references.
 
 =head1 AUTHOR
 
-Bernhard Amann, E<lt>bernhard@icsi.berkeley.eduE<gt>
+Johanna Amann, E<lt>johanna@icir.orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2012 by Bernhard Amann
+Copyright 2012 by Johanna Amann
 
 This Library Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
